--- a/index.html
+++ b/index.html
@@ -19,20 +19,9 @@
         }
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.4.1"
-  }
-}
-</script>
-</head>
+  </head>
   <body class="bg-background text-slate-900 antialiased">
-    <div id="root"></div>
+    <div id="root">Loading...</div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
